<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_selector"
        android:title="@string/home" />

    <item android:title="@string/my_leagues"
        android:icon="@drawable/my_match_selector"
        android:id="@+id/my_league"/>

    <!--<item android:title="@string/feed"
        android:icon="@drawable/ic_feed"
        android:id="@+id/feed"/>-->
    <item android:title=""
        android:enabled="false"
        android:id="@+id/empty"/>

    <item android:title="@string/wallet"
        android:icon="@drawable/wallet_selector"
        android:id="@+id/wallet"/>

    <!--   <item android:title="Profile"
           android:icon="@drawable/profile_selector"
           android:id="@+id/profile"/>-->

    <item android:title="More"
        android:icon="@drawable/more_selector"
        android:id="@+id/more"/>

</menu>