<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:fillViewport="true"
    tools:context=".Fragment.BasicDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_15sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:id="@+id/basic_view"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/basic_details"
                android:textColor="@color/font_color"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="Referal Code is optional"
                android:textColor="@color/font_color"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/basic_view"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:gravity="bottom"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_number_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/shape_edit_text_login"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="Enter Phone Number"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/detail_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/shape_edit_text_login"
                android:padding="@dimen/_8sdp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
                android:hint="@string/full_name" />

            <EditText
                android:id="@+id/detail_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/shape_edit_text_login"
                android:hint="@string/e_mail"
                android:padding="@dimen/_8sdp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/detail_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/shape_edit_text_login"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:hint="@string/team_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/shape_edit_text_login"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:textAllCaps="true"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/detail_refer_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/shape_edit_text_login"
                android:hint="@string/referal_code_optional"
                android:inputType="textCapCharacters"
                android:textAllCaps="true" />

        </LinearLayout>

        <Button
            android:id="@+id/basic_detail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/shape_primary"
            android:text="@string/submit"
            android:textColor="@color/white_font" />
    </RelativeLayout>

</ScrollView>