<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.BasicDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/basic_detail"
            android:textColor="@color/normal_bg"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/set_your_name_and_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray_outline"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_10sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_my_profile" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ccc" />

            <EditText
                android:id="@+id/display_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
                android:hint="Full name"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword"
                android:longClickable="false"
                android:maxLength="54"
                android:maxLines="1"
                android:nextFocusDown="@id/edtEmail"
                android:singleLine="true"
                android:textColor="@color/textPrimary"
                android:textIsSelectable="false"
                android:textSize="@dimen/_11ssp" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/btn_gray_outline"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_10sdp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="@dimen/_6sdp"
                android:src="@drawable/ic_email"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ccc"/>

            <EditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Email"
                android:enabled="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/transparent"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/_11ssp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white_font"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_alignParentBottom="true" />
    </LinearLayout>


</FrameLayout>